{
    "name": "TouchInputActions",
    "maps": [
        {
            "name": "Touch",
            "id": "d6080573-8809-46fb-99f8-38f5f7d668d7",
            "actions": [
                {
                    "name": "TouchContact",
                    "type": "Button",
                    "id": "30269bed-a0f6-4844-97e6-2240512fc3ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "719ef393-595a-439d-9c09-f89d74ed768e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "BackButton",
                    "type": "Button",
                    "id": "60d84b46-6a8b-4d0c-aad6-8152f4802702",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "675ab85b-e4e5-4e14-96de-af9d1e2cc164",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81bc8b8b-3048-40bc-b56d-6a5b55cecd0a",
                    "path": "<Touchscreen>/primaryTouch/indirectTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90a4bff1-b9ad-493c-b4cd-8e744fc969a3",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84771473-69d1-4ff7-a9e5-d0b4d3c73627",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60bcbed0-c106-4948-ad52-9e9eff68bc3c",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BackButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}